--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .logo-container {
-  margin-bottom: 1rem; /* Espaço entre o logo e o menu */
+  margin-bottom: 1rem;
 }
 
 .logo {
@@ -30,7 +30,7 @@ body {
 .navbar ul {
   list-style: none;
   display: flex;
-  justify-content: center; /* Centraliza os links */
+  justify-content: center;
   gap: 1rem;
 }
 
@@ -38,4 +38,29 @@ body {
   text-decoration: none;
   color: #333;
   font-weight: bold;
+}
+
+/* Área Principal */
+.hero-section {
+  background-color: #ffffff;
+  text-align: center;
+  padding: 3rem 0;
+}
+
+.hero-content h1 {
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  color: #1a5f7a; /* Azul marinho */
+}
+
+.hero-content p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  color: #333;
+}
+
+.hero-content img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 2rem;
 }
