--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
@@ -63,4 +66,23 @@ body {
   max-width: 100%;
   height: auto;
   margin-top: 2rem;
+}
+
+/* Serviços */
+.services-section {
+  background-color: #808080;
+  padding: 3rem 0;
+  text-align: center;
+  color: #ffffff;
+}
+
+.services-section h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.services-section ul {
+  list-style: disc;
+  padding-left: 2rem;
+  color: #ffffff;
 }
